yaml/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app-deployment
  labels:
    app: angular-app
spec:
  replicas: 3 # Number of pod replicas
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app-nginx
        image: diningregistry.azurecr.io/angular-dining-services
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
