yaml/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql  # Specify the namespace here
spec:
  ports:
    - port: 3306  # Expose MySQL on port 3306
  selector:
    app: mysql
  clusterIP: None  # Headless service for stable DNS for StatefulSet
