yaml/angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: diningservices.vishalgandla.online
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80
  tls:
  - hosts:
    - diningservices.vishalgandla.online
    secretName: cert-10071999
