yaml/springboot-ingress.yaml
#=================ingress for using only ip address=================
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: springboot-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#     -  http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: springboot-service
#                 port:
#                   number: 80


#=================ingress for using https=================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: diningservices.vishalgandla.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 80
  tls:
  - hosts:
    - diningservices.vishalgandla.online
    secretName: cert-10071999
